--- a/QuestPackages/daily/mobkill/package.yml
+++ b/QuestPackages/daily/mobkill/package.yml
@@ -1,35 +1,255 @@
 package:
   templates:
-    - daily-template
-
+  - daily-template
 menus:
-  levelMenu:
+  mobkillQuestsMenu:
     height: 4
-    title: Level Menu
-    command: /levelmobkill
+    title: Mobkill  Quests
     slots:
       0-8: "filler,filler,filler,filler,filler,filler,filler,filler,filler"
-      "9": level1MobkillQuestsMenu
-      "10": level2MobkillQuestsMenu
+      9: CreeperActiveFalse,CreeperActiveTrue,CreeperShrine,CreeperShrineFinished
+      10: PigActiveFalse,PigActiveTrue,PigShrine,PigShrineFinished
+      11: SkeletonActiveFalse,SkeletonActiveTrue,SkeletonShrine,SkeletonShrineFinished
+      12: SpiderActiveFalse,SpiderActiveTrue,SpiderShrine,SpiderShrineFinished
+      13: ZombieActiveFalse,ZombieActiveTrue,ZombieShrine,ZombieShrineFinished
       28-35: "filler,filler,filler,filler,filler,filler,filler,filler,filler"
       27: "back"
     items:
-      level1MobkillQuestsMenu:
-        item: level1MobkillQuestsMenu
+      CreeperActiveFalse:
+        item: CreeperActiveFalse
+        conditions: "!daily-mobkill--creeper.collectTaken"
         text:
-        - "&b[Level 1]"
-        - "Mobkill Quests"
+          - $daily-mobkill--creeper.title$
+          - $daily-mobkill--creeper.description_line_1$
+          - $daily-mobkill--creeper.description_line_2$
+          - 
+          - $status.notStarted$
+          - $action.start$
         click:
-          left: openLevel1MobkillQuestsMenu
+          left: daily.mobkillCheckActive,daily-mobkill--creeper.collectStartFolder
         close: true
-      level2MobkillQuestsMenu:
-        item: level2MobkillQuestsMenu
+      CreeperActiveTrue:
+        item: CreeperActiveTrue
+        conditions: daily-mobkill--creeper.collectTaken,!daily-mobkill--creeper.shrineTaken
         text:
-        - "&b[Level 2]"
-        - "Mobkill Quests"
+          - $daily-mobkill--creeper.title$
+          - $daily-mobkill--creeper.description_line_1$
+          - $daily-mobkill--creeper.description_line_2$
+          - 
+          - $status.inProgress$
+          - "%daily-mobkill--creeper.objective.collect.absoluteAmount%/%daily-mobkill--creeper.objective.collect.absoluteTotal%"
+          - $action.reset$
         click:
-          left: openLevel2MobkillQuestsMenu
+          right: resetNotify,daily-mobkill--creeper.reset
         close: true
+      CreeperShrine:
+        item: CreeperActiveTrue
+        conditions: daily-mobkill--creeper.shrineTaskActive
+        text:
+          - $daily-mobkill--creeper.title$
+          - $daily-mobkill--creeper.shrine_line_1$
+          - $daily-mobkill--creeper.shrine_line_2$
+          - 
+          - $status.inProgress$
+        close: true
+      CreeperShrineFinished:
+        item: questComplete
+        conditions: daily-mobkill--creeper.questComplete
+        text:
+          - $daily-mobkill--creeper.title$
+          - $daily-mobkill--creeper.done_line_1$
+          - $daily-mobkill--creeper.done_line_2$
+          - 
+          - $status.inProgress$
+        close: false
+      PigActiveFalse:
+        item: PigActiveFalse
+        conditions: "!daily-mobkill--pig.collectTaken"
+        text:
+          - $daily-mobkill--pig.title$
+          - $daily-mobkill--pig.description_line_1$
+          - $daily-mobkill--pig.description_line_2$
+          - 
+          - $status.notStarted$
+          - $action.start$
+        click:
+          left: daily.mobkillCheckActive,daily-mobkill--pig.collectStartFolder
+        close: true
+      PigActiveTrue:
+        item: PigActiveTrue
+        conditions: daily-mobkill--pig.collectTaken,!daily-mobkill--pig.shrineTaken
+        text:
+          - $daily-mobkill--pig.title$
+          - $daily-mobkill--pig.description_line_1$
+          - $daily-mobkill--pig.description_line_2$
+          - 
+          - $status.inProgress$
+          - "%daily-mobkill--pig.objective.collect.absoluteAmount%/%daily-mobkill--pig.objective.collect.absoluteTotal%"
+          - $action.reset$
+        click:
+          right: resetNotify,daily-mobkill--pig.reset
+        close: true
+      PigShrine:
+        item: PigActiveTrue
+        conditions: daily-mobkill--pig.shrineTaskActive
+        text:
+          - $daily-mobkill--pig.title$
+          - $daily-mobkill--pig.shrine_line_1$
+          - $daily-mobkill--pig.shrine_line_2$
+          - 
+          - $status.inProgress$
+        close: true
+      PigShrineFinished:
+        item: questComplete
+        conditions: daily-mobkill--pig.questComplete
+        text:
+          - $daily-mobkill--pig.title$
+          - $daily-mobkill--pig.done_line_1$
+          - $daily-mobkill--pig.done_line_2$
+          - 
+          - $status.inProgress$
+        close: false
+      SkeletonActiveFalse:
+        item: SkeletonActiveFalse
+        conditions: "!daily-mobkill--skeleton.collectTaken"
+        text:
+          - $daily-mobkill--skeleton.title$
+          - $daily-mobkill--skeleton.description_line_1$
+          - $daily-mobkill--skeleton.description_line_2$
+          - 
+          - $status.notStarted$
+          - $action.start$
+        click:
+          left: daily.mobkillCheckActive,daily-mobkill--skeleton.collectStartFolder
+        close: true
+      SkeletonActiveTrue:
+        item: SkeletonActiveTrue
+        conditions: daily-mobkill--skeleton.collectTaken,!daily-mobkill--skeleton.shrineTaken
+        text:
+          - $daily-mobkill--skeleton.title$
+          - $daily-mobkill--skeleton.description_line_1$
+          - $daily-mobkill--skeleton.description_line_2$
+          - 
+          - $status.inProgress$
+          - "%daily-mobkill--skeleton.objective.collect.absoluteAmount%/%daily-mobkill--skeleton.objective.collect.absoluteTotal%"
+          - $action.reset$
+        click:
+          right: resetNotify,daily-mobkill--skeleton.reset
+        close: true
+      SkeletonShrine:
+        item: SkeletonActiveTrue
+        conditions: daily-mobkill--skeleton.shrineTaskActive
+        text:
+          - $daily-mobkill--skeleton.title$
+          - $daily-mobkill--skeleton.shrine_line_1$
+          - $daily-mobkill--skeleton.shrine_line_2$
+          - 
+          - $status.inProgress$
+        close: true
+      SkeletonShrineFinished:
+        item: questComplete
+        conditions: daily-mobkill--skeleton.questComplete
+        text:
+          - $daily-mobkill--skeleton.title$
+          - $daily-mobkill--skeleton.done_line_1$
+          - $daily-mobkill--skeleton.done_line_2$
+          - 
+          - $status.inProgress$
+        close: false
+      SpiderActiveFalse:
+        item: SpiderActiveFalse
+        conditions: "!daily-mobkill--spider.collectTaken"
+        text:
+          - $daily-mobkill--spider.title$
+          - $daily-mobkill--spider.description_line_1$
+          - $daily-mobkill--spider.description_line_2$
+          - 
+          - $status.notStarted$
+          - $action.start$
+        click:
+          left: daily.mobkillCheckActive,daily-mobkill--spider.collectStartFolder
+        close: true
+      SpiderActiveTrue:
+        item: SpiderActiveTrue
+        conditions: daily-mobkill--spider.collectTaken,!daily-mobkill--spider.shrineTaken
+        text:
+          - $daily-mobkill--spider.title$
+          - $daily-mobkill--spider.description_line_1$
+          - $daily-mobkill--spider.description_line_2$
+          - 
+          - $status.inProgress$
+          - "%daily-mobkill--spider.objective.collect.absoluteAmount%/%daily-mobkill--spider.objective.collect.absoluteTotal%"
+          - $action.reset$
+        click:
+          right: resetNotify,daily-mobkill--spider.reset
+        close: true
+      SpiderShrine:
+        item: SpiderActiveTrue
+        conditions: daily-mobkill--spider.shrineTaskActive
+        text:
+          - $daily-mobkill--spider.title$
+          - $daily-mobkill--spider.shrine_line_1$
+          - $daily-mobkill--spider.shrine_line_2$
+          - 
+          - $status.inProgress$
+        close: true
+      SpiderShrineFinished:
+        item: questComplete
+        conditions: daily-mobkill--spider.questComplete
+        text:
+          - $daily-mobkill--spider.title$
+          - $daily-mobkill--spider.done_line_1$
+          - $daily-mobkill--spider.done_line_2$
+          - 
+          - $status.inProgress$
+        close: false
+      ZombieActiveFalse:
+        item: ZombieActiveFalse
+        conditions: "!daily-mobkill--zombie.collectTaken"
+        text:
+          - $daily-mobkill--zombie.title$
+          - $daily-mobkill--zombie.description_line_1$
+          - $daily-mobkill--zombie.description_line_2$
+          - 
+          - $status.notStarted$
+          - $action.start$
+        click:
+          left: daily.mobkillCheckActive,daily-mobkill--zombie.collectStartFolder
+        close: true
+      ZombieActiveTrue:
+        item: ZombieActiveTrue
+        conditions: daily-mobkill--zombie.collectTaken,!daily-mobkill--zombie.shrineTaken
+        text:
+          - $daily-mobkill--zombie.title$
+          - $daily-mobkill--zombie.description_line_1$
+          - $daily-mobkill--zombie.description_line_2$
+          - 
+          - $status.inProgress$
+          - "%daily-mobkill--zombie.objective.collect.absoluteAmount%/%daily-mobkill--zombie.objective.collect.absoluteTotal%"
+          - $action.reset$
+        click:
+          right: resetNotify,daily-mobkill--zombie.reset
+        close: true
+      ZombieShrine:
+        item: ZombieActiveTrue
+        conditions: daily-mobkill--zombie.shrineTaskActive
+        text:
+          - $daily-mobkill--zombie.title$
+          - $daily-mobkill--zombie.shrine_line_1$
+          - $daily-mobkill--zombie.shrine_line_2$
+          - 
+          - $status.inProgress$
+        close: true
+      ZombieShrineFinished:
+        item: questComplete
+        conditions: daily-mobkill--zombie.questComplete
+        text:
+          - $daily-mobkill--zombie.title$
+          - $daily-mobkill--zombie.done_line_1$
+          - $daily-mobkill--zombie.done_line_2$
+          - 
+          - $status.inProgress$
+        close: false
       filler:
         text: "&a "
         item: "filler"
@@ -38,12 +258,16 @@ menus:
         text:
             - "&c&lGo Back"
         click:
-          left: "daily.openDailyMenu"
+          left: "daily.openMobkillLevelMenu"
         close: true
-events:
-  openLevel1MobkillQuestsMenu: menu open daily-mobkill-level1.mobkillQuestsMenu
-  openLevel2MobkillQuestsMenu: menu open daily-mobkill-level2.mobkillQuestsMenu
-
 items:
-  level1MobkillQuestsMenu: $level1GUIItem$
-  level2MobkillQuestsMenu: $level2GUIItem$
+  CreeperActiveFalse: $daily-mobkill-creeper.target_drops_slug$
+  CreeperActiveTrue: $daily-mobkill-creeper.target_drops_slug$ $enchants$ $flags$
+  PigActiveFalse: $daily-mobkill-pig.target_drops_slug$
+  PigActiveTrue: $daily-mobkill-pig.target_drops_slug$ $enchants$ $flags$
+  SkeletonActiveFalse: $daily-mobkill-skeleton.target_drops_slug$
+  SkeletonActiveTrue: $daily-mobkill-skeleton.target_drops_slug$ $enchants$ $flags$
+  SpiderActiveFalse: $daily-mobkill-spider.target_drops_slug$
+  SpiderActiveTrue: $daily-mobkill-spider.target_drops_slug$ $enchants$ $flags$
+  ZombieActiveFalse: $daily-mobkill-zombie.target_drops_slug$
+  ZombieActiveTrue: $daily-mobkill-zombie.target_drops_slug$ $enchants$ $flags$
